# UniForm_

./: README.md
challan_gen_backend/: .gitignore  main.py  pyproject.toml
challan_gen_backend/Configs/: db.py  utils.py
challan_gen_backend/Routes/: csv_email_router.py  manual_route.py  user_routes.py
challan_gen_backend/Schemas/: schemas.py
challan_generation/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
challan_generation/src/: App.jsx
challan_generation/src/Components/: Dashboard.jsx  Footer.jsx  HowItWorks.jsx  LandingPage.jsx  LoginPage.jsx  Navbar.jsx  SignUpPage.jsx
challan_generation/src/api/: auth.js  axiosClient.js
challan_generation/src/pages/: BulkUpload.jsx  EmailMonitor.jsx  ManualEntry.jsx
